--- a/app/templates/recipes.hbs
+++ b/app/templates/recipes.hbs
@@ -1,3 +1,32 @@
-<div class="row">
-{{outlet}}
-</div>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Recipes</a>
+      </div>
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a {{action 'random'}}>Random</a></li>
+          <li><a href="#" data-action="prev">Previous</a></li>
+          <li><a href="#" data-action="next">Next</a></li>
+          <li>{{#if session.isAuthenticated}}
+                <a {{action 'invalidateSession'}}>Logout</a>
+              {{else}}
+                {{#link-to 'login'}}Login{{/link-to}}
+              {{/if}}
+          </li>
+        </ul>
+      </div><!--/.nav-collapse -->
+    </div>
+  </nav>
+
+  <div class="container">
+    <div class="row">
+    {{outlet}}
+    </div>
+  </div><!-- /.container -->
