--- a/app/templates/recipes/show.hbs
+++ b/app/templates/recipes/show.hbs
@@ -1,7 +1,19 @@
-<h2>{{model.title}}</h2>
-<ul>
-  {{#each model.ingredients as |ingredient|}}
-    <li>{{ingredient.name}}</li>
-  {{/each}}
-</ul>
+<h2><a href="{{model.link}}">{{model.title}}</a></h2>
 
+<img src="{{model.thumbnail}}">
+<div class="row">
+  <div class="ingredients-container col-xs-12 col-sm-4 col-md-5 col-lg-5">
+    <h3>Ingredients</h3>
+    <ul>
+      {{#each model.ingredients as |ingredient|}}
+        <li>{{ingredient.name}}</li>
+      {{/each}}
+    </ul>
+  </div>
+  <div class="prep-steps-container col-xs-12 col-sm-8 col-md-7 col-lg-7">
+    <h3>Preparation</h3>
+    {{#each model.preparation_steps as |step|}}
+      <p>{{step}}</p>
+    {{/each}}
+  </div>
+</div>
