Upgrade to ember 2.16.0

--- a/app/templates/recipes/show.hbs
+++ b/app/templates/recipes/show.hbs
@@ -6,7 +6,7 @@
     <h3>Ingredients</h3>
     <ul>
       {{#each model.ingredients as |ingredient|}}
-        <li>{{ingredient.quantity}} {{ingredient.unit}} {{ingredient.name}}</li>
+        <li>{{ingredient}}</li>
       {{/each}}
     </ul>
   </div>
