--- a/app/templates/recipes.hbs
+++ b/app/templates/recipes.hbs
@@ -7,7 +7,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        {{link-to "Recipes" "application" class="navbar-brand"}}
+        {{link-to "Recipes" "index" class="navbar-brand"}}
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
